Reduce allocations during runtime
Signed-off-by: Taylor Smock <tsmock@meta.com>